(postgres) further development of the postgres HA setup
Signed-off-by: Francis Begyn <francis@begyn.be>

--- a/playbook.yaml
+++ b/playbook.yaml
@@ -21,3 +21,5 @@
   roles:
     - role: "postgres"
       tags: ["postgres", "backend"]
+      environment:
+        PGDATA: "{{ postgres.data_directory }}"
