(postgres) setup database and users scheme

--- a/group_vars/backend.yaml
+++ b/group_vars/backend.yaml
@@ -13,3 +13,24 @@ postgres:
   replication:
     username: "replication"
     password: "replication"
+  databases:
+    - name: "testing"
+    - name: "hello"
+    - name: "world"
+    - name: "core"
+  users:
+    - name: "foo"
+      password: "bar"
+      database: "testing"
+    - name: "foo"
+      password: "bar"
+      database: "hello"
+    - name: "hello"
+      password: "world"
+      database: "testing"
+    - name: "hello"
+      password: "world"
+      database: "world"
+    - name: "VIB"
+      password: "data"
+      database: "core"
