(postgres) some finetuning before bed

--- a/group_vars/backend.yaml
+++ b/group_vars/backend.yaml
@@ -13,6 +13,11 @@ postgres:
   replication:
     username: "replication"
     password: "replication"
+  data:
+    - source: "test.csv"
+      database: "core"
+      table: "zwemwater"
+      columns: "data,uitstekend,goed,aanvaardbaar,slecht"
   databases:
     - name: "testing"
     - name: "hello"
