--- a/roles/postgres/tasks/database.yaml
+++ b/roles/postgres/tasks/database.yaml
@@ -1,4 +1,9 @@
 ---
+- name: "postgresql | check port"
+  ansible.builtin.wait_for:
+    port: "{{ postgres.port }}"
+    delay: 2
+
 - name: "postgresql | setup databases"
   community.postgresql.postgresql_db:
     name: "{{ item.name }}"
