--- a/roles/postgres/tasks/replica.yaml
+++ b/roles/postgres/tasks/replica.yaml
@@ -27,6 +27,8 @@
       (genunit.rc is defined and genunit.rc == 0)
       or pgunit.stat.exists
     )
+  notify:
+    - "restart postgresql"
 
 - name: "postgresql | ensure PGDATA"
   ansible.builtin.file:
@@ -56,13 +58,6 @@
   notify:
     - "restart postgresql"
 
-- name: "postgresql | setup replication user"
-  become_user: "postgres"
-  community.postgresql.postgresql_user:
-    name: "{{ postgres.replication.username }}"
-    password: "{{ postgres.replication.password }}"
-    role_attr_flags: "REPLICATION"
-
 - name: "postgresql | check standby signal"
   ansible.builtin.stat:
     dest: "{{ postgres.data_directory }}/standby.signal"
@@ -78,6 +73,21 @@
     state: "touch"
   notify:
     - "restart postgresql"
+
+- name: "flushing handlers"
+  ansible.builtin.meta: "flush_handlers"
+
+- name: "postgresql | wait for startup"
+  ansible.builtin.wait_for:
+    port: "{{ postgres.port }}"
+    delay: 2
+
+- name: "postgresql | setup replication user"
+  become_user: "postgres"
+  community.postgresql.postgresql_user:
+    name: "{{ postgres.replication.username }}"
+    password: "{{ postgres.replication.password }}"
+    role_attr_flags: "REPLICATION"
 
 - name: "ensure services started"
   ansible.builtin.service:
