(postgres) fix data importing and loading
Signed-off-by: Francis Begyn <francis@begyn.be>

--- a/group_vars/backend.yaml
+++ b/group_vars/backend.yaml
@@ -17,7 +17,13 @@ postgres:
     - source: "test.csv"
       database: "core"
       table: "zwemwater"
-      columns: "data,uitstekend,goed,aanvaardbaar,slecht"
+      columns:
+        - "id bigserial primary key"
+        - "data int"
+        - "uitstekend float"
+        - "goed float"
+        - "aanvaardbaar float"
+        - "slecht float"
   databases:
     - name: "testing"
     - name: "hello"
