--- a/roles/postgres/tasks/main.yaml
+++ b/roles/postgres/tasks/main.yaml
@@ -4,36 +4,37 @@
   ansible.builtin.import_tasks:
     file: "base.yaml"
 
-- name: "primary setup"
-  when: "inventory_hostname in groups['db-primary']"
-  tags: ["primary"]
-  ansible.builtin.import_tasks:
-    file: "primary.yaml"
+# - name: "primary setup"
+#   when: "inventory_hostname in groups['db-primary']"
+#   tags: ["primary"]
+#   ansible.builtin.import_tasks:
+#     file: "primary.yaml"
 
-- name: "database setup"
-  when: "inventory_hostname in groups['db-primary']"
-  become_user: "postgres"
-  tags: ["primary", "setup"]
+- name: "patroni"
+  tags: ["patroni"]
   ansible.builtin.import_tasks:
-    file: "database.yaml"
+    file: "patroni.yaml"
 
-- name: "user setup"
-  when: "inventory_hostname in groups['db-primary']"
-  become_user: "postgres"
-  tags: ["primary", "setup"]
-  ansible.builtin.import_tasks:
-    file: "users.yaml"
+# - name: "database setup"
+#   become_user: "postgres"
+#   tags: ["primary", "setup"]
+#   ansible.builtin.import_tasks:
+#     file: "database.yaml"
+#
+# - name: "user setup"
+#   become_user: "postgres"
+#   tags: ["primary", "setup"]
+#   ansible.builtin.import_tasks:
+#     file: "users.yaml"
+#
+# - name: "data setup"
+#   when: "inventory_hostname in groups['db-primary']"
+#   become_user: "postgres"
+#   tags: ["setup","data"]
+#   ansible.builtin.import_tasks:
+#     file: "data.yaml"
 
-- name: "replica setup"
-  when: "inventory_hostname in groups['db-replica']"
-  tags: ["replica"]
+- name: "keepalived"
+  tags: ["keepalived"]
   ansible.builtin.import_tasks:
-    file: "replica.yaml"
-
-# this needs some schema loaded which is out of scope here
-- name: "data setup"
-  when: "inventory_hostname in groups['db-primary']"
-  become_user: "postgres"
-  tags: ["setup","data"]
-  ansible.builtin.import_tasks:
-    file: "data.yaml"
+    file: "keepalived.yaml"
