--- a/roles/postgres/tasks/base.yaml
+++ b/roles/postgres/tasks/base.yaml
@@ -31,124 +31,18 @@
     name: "{{ item }}"
     state: "present"
   with_items:
-    - "postgresql17-server"
-    - "postgresql17-contrib"
+    - "postgresql{{ postgres.version }}-server"
+    - "postgresql{{ postgres.version }}-contrib"
     - "patroni"
     - "consul"
     - "patroni-consul"
     - "keepalived"
 
-- name: "remove packages on the hosts"
-  ansible.builtin.package:
-    name: "{{ item }}"
-    state: "absent"
-  with_items:
-    - "postgresql-server"
-    - "postgresql-contrib"
-    - "pgbouncer"
-
-- name: "ensure services enabled"
+- name: "enable service"
   ansible.builtin.service:
     name: "{{ item }}"
     enabled: true
   with_items:
+    - "patroni"
     - "keepalived"
-
-- name: "postgresql | allow postgresql on firewalld"
-  ansible.posix.firewalld:
-    port: "{{ postgres.port }}/tcp"
-    permanent: true
-    immediate: true
-    state: "enabled"
-    zone: "{{ item }}"
-  with_items:
-    - "public"
-    - "internal"
-    - "trusted"
-    - "home"
-  notify:
-    - "reload firewalld"
-
-- name: "keepalived | create keepalived_script group"
-  ansible.builtin.group:
-    name: "keepalived_script"
-    state: "present"
-  notify:
-    - "reload keepalived"
-
-- name: "keepalived | create keepalived_script user"
-  ansible.builtin.user:
-    name: "keepalived_script"
-    groups: "keepalived_script"
-    shell: "/bin/false"
-    state: "present"
-    password: "!"
-    create_home: false
-    system: true
-  notify:
-    - "reload keepalived"
-
-- name: "keepalived | ensure script path"
-  ansible.builtin.file:
-    dest: "/usr/libexec/keepalived/scripts"
-    state: "directory"
-
-- name: "keepalived | template config"
-  ansible.builtin.template:
-    src: "keepalived.conf.j2"
-    dest: "/etc/keepalived/keepalived.conf"
-    mode: '0644'
-  notify:
-    - "reload keepalived"
-
-- name: "postgresql | create postgres group"
-  ansible.builtin.group:
-    name: "postgres"
-    state: "present"
-
-- name: "postgresql | create postgresql user"
-  ansible.builtin.user:
-    name: "postgres"
-    groups: "postgres"
-    shell: "/bin/false"
-    state: "present"
-    password: "!"
-    create_home: false
-    system: true
-
-- name: "patroni | create patroni group"
-  ansible.builtin.group:
-    name: "patroni"
-    state: "present"
-
-- name: "patroni | create patroniql user"
-  ansible.builtin.user:
-    name: "patroni"
-    groups: "patroni"
-    shell: "/bin/false"
-    state: "present"
-    password: "!"
-    create_home: false
-    system: true
-
-- name: "postgresql | ensure PGDATA"
-  ansible.builtin.file:
-    dest: "{{ postgres.data_directory }}"
-    state: "directory"
-    owner: "postgres"
-    group: "postgres"
-    mode: "0750"
-
-- name: "postgresql | ensure log path"
-  ansible.builtin.file:
-    dest: "{{ postgres.log.directory }}"
-    state: "directory"
-    owner: "postgres"
-    group: "postgres"
-
-- name: "postgresql | ensure services"
-  ansible.builtin.service:
-    name: "{{ item }}"
-    enabled: true
-  with_items:
-    - "postgresql-{{ postgres.version }}"
+    - "consul"
