--- a/roles/postgres/tasks/patroni.yaml
+++ b/roles/postgres/tasks/patroni.yaml
@@ -1,38 +1,26 @@
 ---
-- name: "postgresql | check if PG_VERSION exists"
-  ansible.builtin.stat:
-    path: "{{ postgres.data_directory }}/PG_VERSION"
-  register: pgversion
+- name: "patroni | create patroni group"
+  ansible.builtin.group:
+    name: "patroni"
+    state: "present"
 
-- name: "postgresql | check if postgresql.auto.conf exists"
-  ansible.builtin.stat:
-    path: "{{ postgres.data_directory }}/postgresql.auto.conf"
-  register: pgauto
+- name: "patroni | create patroniql user"
+  ansible.builtin.user:
+    name: "patroni"
+    groups: "patroni"
+    shell: "/bin/bash"
+    state: "present"
+    password: "!"
+    create_home: false
+    system: true
 
-- name: "postgresql | check if postgres@{{ postgres.unit_target }} exists"
-  ansible.builtin.stat:
-    path: "/etc/systemd/system/postgresql@{{ postgres.unit_target }}.service.d"
-  register: pgunit
-  notify:
-    - "start postgresql"
-
-- name: "postgresql | ensure PGDATA"
+- name: "patroni | ensure log path"
   ansible.builtin.file:
-    dest: "{{ postgres.data_directory }}"
+    dest: "{{ patroni.log.directory }}"
     state: "directory"
     owner: "postgres"
     group: "postgres"
-    mode: "0750"
-
-- name: "consul | render agent config"
-  ansible.builtin.template:
-    src: "consul.hcl.j2"
-    dest: "/etc/consul.d/agent.hcl"
-    owner: "consul"
-    group: "consul"
-    mode: '0644'
-  notify:
-    - "restart consul"
+    mode: '0750'
 
 - name: "patroni | allow patroni on firewalld"
   ansible.posix.firewalld:
@@ -49,6 +37,22 @@
   notify:
     - "reload firewalld"
 
+# - name: "patroni | template pgpass file"
+#   ansible.builtin.file:
+#     dest: "{{ postgres.data_directory }}/.pgpass"
+#     mode: '0644'
+#     owner: "postgres"
+#     group: "postgres"
+#     state: "touch"
+
+- name: "patroni | config directory"
+  ansible.builtin.file:
+    dest: "/etc/patroni"
+    mode: '0755'
+    owner: "postgres"
+    group: "postgres"
+    state: "directory"
+
 - name: "patroni | template patroni config"
   ansible.builtin.template:
     src: "patroni.yaml.j2"
@@ -57,29 +61,22 @@
     owner: "postgres"
     group: "postgres"
   notify:
-    - "reload patroni"
-    - "start patroni"
+    - "restart patroni"
 
 - name: "flushing handlers"
   ansible.builtin.meta: "flush_handlers"
 
 - name: "postgresql | wait for startup"
   ansible.builtin.wait_for:
+    host: "{{ ansible_host }}"
     port: "{{ postgres.port }}"
     delay: 2
-
-- name: "postgresql | setup replication user"
-  become_user: "postgres"
-  community.postgresql.postgresql_user:
-    name: "{{ postgres.replication.username }}"
-    password: "{{ postgres.replication.password }}"
-    role_attr_flags: "REPLICATION"
 
 - name: "ensure services started"
   ansible.builtin.service:
     name: "{{ item }}"
     state: "started"
   with_items:
-    - "postgresql@{{ postgres.unit_target }}"
     - "patroni"
+    - "firewalld"
     - "keepalived"
